# s3-backup

./: .env.template  .gitignore  README.md  flake.nix  makefile  pyproject.toml  setup.py
config/: secrets.yaml
requirements/: base.in  base.txt  dev.in  dev.txt
rpmbuild/SPECS/: s3-backup.spec
s3_backup/: __init__.py  backup.py  collection.py  context.py  initialize.py  installation.py  main.py  manage.py  profile.py  restore.py  settings.py
s3_backup/commands/: __init__.py  backup.py  collection.py  initialize.py  manage.py  restore.py
s3_backup/data/: conf.yaml  template.yaml
s3_backup/tests/: profile_mocks.py  test_backup.py  test_initialization.py  test_installed.py  test_manage.py  test_restore.py  test_settings.py
s3_backup/tests/home/.s3-backup/profiles/: my_profile.yaml  myprofile.yaml
scripts/: s3-backup
src/s3_backup/: backup.py
src/s3_backup/tests/: test_backup.py  test_configs.py
src/s3_backup/tests/config/: conf.yaml
src/s3_backup/tests/logs/: .exclude-files.txt
src/s3_backup/tests/source/: dracula.txt
src/s3_backup/tests/source/dickens/: a_tale_of_two_cities.txt  great_expectations.txt
src/scripts/: s3-backup
