[tool.poetry]
name = "S3-backup"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11.0"
pyyaml = "*"
click = "*"
python-dotenv = "*"
boto = "*"

[tool.poetry.group.development.dependencies]
black = "*"
flake8 = "*"
pytest = "*"

[tool.poetry.scripts]
s3-backup = "s3_backup:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

